# ResearchProject

RenderResearchProject/: .gitignore  TODO.txt
RenderResearchProject/RenderSource/: CMakeLists.txt
RenderResearchProject/RenderSource/CommonLibraries/: CMakeLists.txt
RenderResearchProject/RenderSource/CommonLibraries/include/GLAD/: glad.h
RenderResearchProject/RenderSource/CommonLibraries/sources/: glad.c
RenderResearchProject/RenderSource/Kaynaklar/: kaynaklar.txt
RenderResearchProject/RenderSource/Kaynaklar/Dersler/: CreatingWindowD1.txt  DrawShapesD7.txt  MathematicD2.txt  shaders_transformD8.txt
RenderResearchProject/RenderSource/RenderProgram/: CMakeLists.txt
RenderResearchProject/RenderSource/RenderProgram/include/: LineRenderer.h  MeshRenderer.h  RenderProgram.h  Screen.h
RenderResearchProject/RenderSource/RenderProgram/include/Animations/: Animation.h  Animator.h  Bones.h
RenderResearchProject/RenderSource/RenderProgram/include/Graphics/Model/: Cube.h  Lamp.h
RenderResearchProject/RenderSource/RenderProgram/include/Graphics/Objects/: Mesh.h  Model.h  ModelLoader.h
RenderResearchProject/RenderSource/RenderProgram/include/Graphics/Rendering/: Cubemaps.h  Light.h  Material.h  Shader.h  TextRenderer.h  Texture.h
RenderResearchProject/RenderSource/RenderProgram/include/IO/: Camera.h  KeyboardInput.h  MouseInput.h
RenderResearchProject/RenderSource/RenderProgram/include/OpenGLFunctions/: OpenGLFunctions.h
RenderResearchProject/RenderSource/RenderProgram/sources/: LineRenderer.cxx  MeshRenderer.cxx  RenderProgram.cxx  Screen.cxx
RenderResearchProject/RenderSource/RenderProgram/sources/Animation/: Animation.cxx  Animator.cxx  Bones.cxx
RenderResearchProject/RenderSource/RenderProgram/sources/Graphics/Objects/: Mesh.cxx  Model.cxx  ModelLoader.cxx
RenderResearchProject/RenderSource/RenderProgram/sources/Graphics/Rendering/: Cubemaps.cxx  Light.cxx  Material.cxx  Shader.cxx  TextRenderer.cxx  Texture.cxx
RenderResearchProject/RenderSource/RenderProgram/sources/IO/: Camera.cxx  KeyboardInput.cxx  MouseInput.cxx
RenderResearchProject/RenderSource/RenderProgram/sources/OpenGLFunctions/: OpenGLFunctions.cxx
RenderResearchProject/RenderSource/RenderProgramDLL/: CMakeLists.txt  RenderProgramDLL.cxx  RenderProgramDLL.h
RenderResearchProject/RenderSource/RenderProgramTester/: CMakeLists.txt  RenderProgramTester.cxx
SimulationResearchProject/: TODO.txt
SimulationResearchProject/SimulationWFA/: .editorconfig  SimulationWFA.sln
SimulationResearchProject/SimulationWFA/SimulationWFA/: ComponentPanel.cs  Form1.Designer.cs  Form1.aa-ER.resx  Form1.cs  Form1.resx  HierarchySimButton.cs  Program.cs  RemoveComponentButton.cs  ResetButton.cs  SerializedEditor.cs  SimTextBox.cs  SimulationWFA.csproj
SimulationResearchProject/Test/DLLTest/: DLLTest.sln
(+342 files in other folders)
